--- a/config/database.yml
+++ b/config/database.yml
@@ -17,19 +17,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: Muskan
+  host: localhost
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: hello_backend_development
+  database: Hello_world_Api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: hello_backend
+  #username: Hello_world_Api
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hello_backend_test
+  database: Hello_world_Api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +84,7 @@ test:
 #
 production:
   <<: *default
-  database: hello_backend_production
-  username: hello_backend
-  password: <%= ENV["HELLO_BACKEND_DATABASE_PASSWORD"] %>
+  database: Hello_world_Api_production
+  username: Hello_world_Api
+  password: <%= ENV["HELLO_WORLD_API_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
